--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "format": "eslint . --fix"
   },
   "devDependencies": {
     "@nuxt/content": "^2.9.0",
@@ -15,7 +17,9 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "nuxt": "^3.8.2",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "@antfu/eslint-config": "^2.1.0",
+    "eslint": "^8.54.0"
   },
   "dependencies": {
     "@unocss/nuxt": "^0.57.7",
