--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,18 +11,20 @@
     "lint": "eslint .",
     "format": "eslint . --fix"
   },
-  "devDependencies": {
-    "@nuxt/content": "^2.9.0",
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "nuxt": "^3.8.2",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "@antfu/eslint-config": "^2.1.0",
-    "eslint": "^8.54.0"
-  },
   "dependencies": {
     "@unocss/nuxt": "^0.57.7",
     "@vueuse/nuxt": "^10.6.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.1.0",
+    "@iconify-json/logos": "^1.1.38",
+    "@iconify/json": "^2.2.146",
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "eslint": "^8.54.0",
+    "nuxt": "^3.8.2",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   }
 }
