--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@unocss/nuxt": "^0.57.7",
-    "@vueuse/nuxt": "^10.6.1"
+    "@vueuse/nuxt": "^10.6.1",
+    "@webcontainer/api": "^1.1.8",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.1.0",
