--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "next dev"
+        "dev": "nuxt dev"
     },
     "dependencies": {
         "nuxt": "latest"
