--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@unocss/nuxt": "^0.57.7",
     "@vueuse/nuxt": "^10.6.1",
     "@webcontainer/api": "^1.1.8",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.1.0",
