--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@unocss/nuxt": "^0.58.0",
     "@vueuse/nuxt": "^10.6.1",
     "@webcontainer/api": "^1.1.8",
+    "splitpanes": "^3.1.5",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
